# Cpp-Move-Semantics

./: .gitignore  Cpp Move Semantics.md  README.md
source/: CMakeLists.txt  Person.hpp  main.cpp
source/basics/: CMakeLists.txt  card.cpp  card.hpp  customer.hpp  customer1.cpp  customer2.cpp  customerimpl.cpp  customerimpl.hpp  initmeasure.hpp  initmove.hpp  initmoveperf.cpp  intstring.cpp  intstring.hpp  motiv03.cpp  motiv11.cpp  movenoexcept.cpp  person.cpp  person.hpp  personcond.hpp  persondefault.cpp  persondefault.hpp  personmove.cpp  personmove.hpp  refqual.cpp  specialnoexcept.cpp  tasks.cpp  tasks.hpp  tasksbug.cpp  tasksbug.hpp
source/generic/: CMakeLists.txt  perfectpassing.cpp  universalclass.cpp  universalconst.cpp  universalconstructor.cpp  universalmem.cpp  universalspec.cpp
source/lib/: CMakeLists.txt  foreachmove.cpp  future.cpp  moveitor.cpp
source/poly/: CMakeLists.txt  isnothrowmovable.cpp  isnothrowmovable.hpp
